2015-02-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #64517: Revert CaptchaValidator::isValid should be protected
	* Resolves #64972: New view configuration in TYPO3 CMS 6.2
	* Require TYPO3 CMS 6.2
	* Update version to 2.2.0

2015-02-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #64847: Fatal error on CaptchaValidator::isValid() from context PiBaseApi
	* Update version to 2.1.1

2015-01-28  Stanislas Rolland  <typo3@sjbr.ca>

	* Cleanup

2015-01-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #64543: Extension does not handle vendorName
	* Resolves #64525 (Follow-up): Extbase does not find the templates of backend Font Maker in TYPO3 7.0
	* Resolves #64548: Font file not found in Font Maker on PHP 5.5
	* Enable in TYPO3 CMS 7
	* Update version to 2.1.0

2015-01-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #64517: CaptchaValidator::isValid should be protected
	* Resolves #64519: Validate annotation: class name TtfFileValidator should not start with backslash
	* Resolves #64520: Extract module configuration from static template
	* Resolves #64524: SJBR\SrFreecap\Domain\Model\Font raises warning on PHP 5.4+
	* Resolves #64525: Extbase does not find the templates of backend Font Maker in TYPO3 7.0

2014-09-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #61756: Storing session data prevents correct handling of session data in other extensions (Thanks to Daniel Minder)
	* Update version to 2.0.10

2014-08-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 2.0.9

2014-07-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Correction to Spanish localization file
	* Resolves #60536: Mallformed Last-Modified header (Thanks to Christian Ludwig)

2014-04-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Correction to default css styles

2014-04-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Localization of audio captcha may fail for lack of available TCA of pages_language_overlay

2014-04-02  Stanislas Rolland  <typo3@sjbr.ca>
