@@ -1,3 +1,7 @@
+2015-03-18  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Resolves #65649: $this->freeCap->checkWord accepts empty postvar
+
 2015-02-10  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Resolves #64517: Revert CaptchaValidator::isValid should be protected
